--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -41,5 +41,6 @@ androidx-ui-text-google-fonts = { group = "androidx.compose.ui", name = "ui-text
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
+android-library = { id = "com.android.library", version.ref = "agp" }
 kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 
