--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -25,6 +25,9 @@ serialization = "1.6.0"
 decompose = "3.1.0"
 dagger = "2.52"
 material3 = "1.3.0"
+room = "2.6.1"
+ksp = "1.9.0-1.0.13"
+essenty = "2.1.0"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -47,6 +50,10 @@ decompose = { module = "com.arkivanov.decompose:decompose", version.ref = "decom
 extension-decompose = { module = "com.arkivanov.decompose:extensions-compose", version.ref = "decompose" }
 dagger = { group = "com.google.dagger", name = "dagger", version.ref = "dagger" }
 dagger-compiler = { group = "com.google.dagger", name = "dagger-compiler", version.ref = "dagger" }
+room-runtime = { group = "androidx.room", name = "room-runtime", version.ref = "room" }
+room-annotation-processor = { group = "androidx.room", name = "room-compiler", version.ref = "room" }
+room-coroutines = { group = "androidx.room", name = "room-ktx", version.ref = "room" }
+essenty = { group = "com.arkivanov.essenty", name = "lifecycle-coroutines", version.ref = "essenty"}
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
@@ -54,3 +61,4 @@ android-library = { id = "com.android.library", version.ref = "agp" }
 kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 kotlin-serialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlin" }
 kotlin-kapt = { id = "org.jetbrains.kotlin.kapt", version.ref = "kotlin" }
+ksp = { id = "com.google.devtools.ksp", version.ref = "ksp" }
