--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -28,6 +28,7 @@ material3 = "1.3.0"
 room = "2.6.1"
 ksp = "1.9.0-1.0.13"
 essenty = "2.1.0"
+desugar_jdk = "2.0.3"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -54,6 +55,7 @@ room-runtime = { group = "androidx.room", name = "room-runtime", version.ref = "
 room-annotation-processor = { group = "androidx.room", name = "room-compiler", version.ref = "room" }
 room-coroutines = { group = "androidx.room", name = "room-ktx", version.ref = "room" }
 essenty = { group = "com.arkivanov.essenty", name = "lifecycle-coroutines", version.ref = "essenty"}
+desugar_jdk_libs = { group = "com.android.tools", name = "desugar_jdk_libs", version.ref = "desugar_jdk" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
