Add unit test for CalendarMapperTest

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -14,7 +14,6 @@ kotlinCompilerExtensionVersion = "1.5.1"
 agp = "8.6.0"
 kotlin = "1.9.0"
 coreKtx = "1.13.1"
-junit = "4.13.2"
 junitVersion = "1.2.1"
 espressoCore = "3.6.1"
 lifecycleRuntimeKtx = "2.8.5"
@@ -29,10 +28,13 @@ room = "2.6.1"
 ksp = "1.9.0-1.0.13"
 essenty = "2.1.0"
 desugar_jdk = "2.0.3"
+mockk = "1.13.12"
+turbine = "1.1.0"
+kotlinx-coroutines-test = "1.9.0"
+junit-jupiter = "5.10.2"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
-junit = { group = "junit", name = "junit", version.ref = "junit" }
 androidx-junit = { group = "androidx.test.ext", name = "junit", version.ref = "junitVersion" }
 androidx-espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "espressoCore" }
 androidx-lifecycle-runtime-ktx = { group = "androidx.lifecycle", name = "lifecycle-runtime-ktx", version.ref = "lifecycleRuntimeKtx" }
@@ -56,6 +58,10 @@ room-annotation-processor = { group = "androidx.room", name = "room-compiler", v
 room-coroutines = { group = "androidx.room", name = "room-ktx", version.ref = "room" }
 essenty = { group = "com.arkivanov.essenty", name = "lifecycle-coroutines", version.ref = "essenty"}
 desugar_jdk_libs = { group = "com.android.tools", name = "desugar_jdk_libs", version.ref = "desugar_jdk" }
+mockk = { group = "io.mockk", name = "mockk", version.ref = "mockk" }
+turbine = { group = "app.cash.turbine", name = "turbine", version.ref = "turbine" }
+kotlinx-coroutines-test = { group = "org.jetbrains.kotlinx", name = "kotlinx-coroutines-test", version.ref = "kotlinx-coroutines-test" }
+junit-jupiter = { group = "org.junit.jupiter", name = "junit-jupiter", version.ref = "junit-jupiter" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
